Class 'major' changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Story by HTML5 UP</title>
+		<title>Jenny Ralli</title>
+		<link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,10 +21,10 @@
 				<!-- One -->
 					<section  class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Story</h1>
-							<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
+							<h1>Jenny Ralli</h1>
+							<p class="major">I am a tech professional with over 6 years of experience.<br></br>I can help you manage your product during the complete lifecycle, organize and coordinate software development tasks and timelines, design clean and effective user experiences and keep your customers happy.</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle">How i can help!</a></li>
 							</ul>
 						</div>
 						<div class="image">
