--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 		<!-- Wrapper -->
 			<div id="wrapper"  style="font-family: 'Courier New', Courier, monospace" class="divided">
 
-				<!-- One -->
+				<!-- Jenny Ralli -->
 					<section  class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Jenny Ralli</h1>
-							<p class="major">I am a tech professional with over 6 years of experience.<br></br>I can help you manage your product during the complete lifecycle, organize and coordinate software development tasks and timelines, design clean and effective user experiences and keep your customers happy.</p>
+							<p class="major">I am a tech professional with over 6 years of experience.I can help you manage your product during the complete lifecycle, organize and coordinate software development tasks and timelines, design clean and effective user experiences and keep your customers happy.</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">How i can help!</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle">Find out how i can help</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -32,13 +32,16 @@
 						</div>
 					</section>
 
-				<!-- Two -->
+				<!-- Customer Love -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Magna etiam feugiat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Customer Love</h2>
+							<p>I honestly enjoy developing and maintaing customer relationships. 
+								My natural inlcination to actively listening has leveraged with my experience to asking the right questions which allows me to quickly identify 
+								customer needs and opportunities. It is all about successful communication between relative stakeholders and this is my cup of tea. 
+								note: extra ethousiastic when i attend conferences and trade shows getting to socialize and promote services.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#" class="button">See Proof!</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -46,13 +49,13 @@
 						</div>
 					</section>
 
-				<!-- Three -->
+				<!-- Organizational Guru -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Organizational Guru</h2>
+							<p> My magic powers lay to aggregating requests from stakeholders, moderating discussion regarding prioritization of requested developments and translating business requirements to system specifications in a way that developers can successfully code in accordance with customer needs. The most significant activities of my line of work is collaborating with technical teams and closely tracking group progress towards achieving tasks and timelines. I will build and maintain the feature/issue backlog and coordinate with engineers to address all items. If necessary I will elevate roadblocks as needed. Throughout the business process I will conduct competitive analysis and market evaluations and I will document my research findings in a comprehensive manner.  All these actions, to be successfully conducted, are well supported by my collaboration and communication skills.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#" class="button">Too long text, i need proof</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -60,13 +63,13 @@
 						</div>
 					</section>
 
-				<!-- Four -->
+				<!-- UX & Design  -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>UX & Design </h2>
+							<p>I absolutely adore developing new products and defining the user experience based on the agreed requirements. I can manage the enhancement of existing services and design the user experience for new products.  Design thinking is my preferred method and user stories help me express development objectives. I will analyze product performance through customer interviews and user tracking.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#" class="button">Show me!</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -74,11 +77,28 @@
 						</div>
 					</section>
 
-				<!-- Five -->
+				<!-- EvanJennyst -->
+				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>EvanJennyst </h2>
+							<p>I will act an evangelist for opportunities related to the services/products and I will use all methods to promote the product. If needed I can support sales team to present existing product functionality to prospects and track trends and opportunities in current and emerging markets.  </p>
+							<ul class="actions stacked">
+								<li><a href="#" class="button">That was a lame title </a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/spotlight03.jpg" alt="" />
+						</div>
+					</section
+
+
+				<!-- EvanJennyst -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Massa sed condimentum</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2> In Vision I Trust </h2>
+							<p>I will define the service vision, strategy and roadmap in collaboration with involving teams. <br></br>
+									I will be responsible for the product planning and execution throughout the product lifecycle from strategic planning to tactical activities. 
+									<br></br>You should trust me and chillax! </p>
 						</div>
 
 						<!-- Gallery -->
