--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/meMain.jpg" alt="" />
 						</div>
 					</section>
 
@@ -36,16 +36,16 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Customer Love</h2>
-							<p>I honestly enjoy developing and maintaing customer relationships. 
-								My natural inlcination to actively listening has leveraged with my experience to asking the right questions which allows me to quickly identify 
+							<p>Lay back and let me develop and maintain customer relationships. My natural inclination to actively listening has leveraged with my experience to asking the right questions which allows me to quickly identify 
 								customer needs and opportunities. It is all about successful communication between relative stakeholders and this is my cup of tea. 
-								note: extra ethousiastic when i attend conferences and trade shows getting to socialize and promote services.</p>
+								note: extra enthusiastic when i attend conferences and trade shows getting to socialize and promote services. 
+								</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">See Proof!</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/customer love.jpg" alt="" />
 						</div>
 					</section>
 
@@ -67,7 +67,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>UX & Design </h2>
-							<p>I absolutely adore developing new products and defining the user experience based on the agreed requirements. I can manage the enhancement of existing services and design the user experience for new products.  Design thinking is my preferred method and user stories help me express development objectives. I will analyze product performance through customer interviews and user tracking.</p>
+							<p>Artistically developing new products and defining the user experience based on the agreed requirements; I can manage the enhancement of existing services and design the user experience for new products.  Design thinking is my preferred method and user stories help me express development objectives. I will analyze product performance through customer interviews and user tracking.</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Show me!</a></li>
 							</ul>
@@ -81,7 +81,9 @@
 				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>EvanJennyst </h2>
-							<p>I will act an evangelist for opportunities related to the services/products and I will use all methods to promote the product. If needed I can support sales team to present existing product functionality to prospects and track trends and opportunities in current and emerging markets.  </p>
+							<p1>I will act an evangelist for opportunities related to the services/products and I will use all methods 
+								to promote the product. If needed I can support sales team to present existing product
+								 functionality to prospects and track trends and opportunities in current and emerging markets.</p1>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">That was a lame title </a></li>
 							</ul>
@@ -92,164 +94,17 @@
 					</section
 
 
-				<!-- EvanJennyst -->
+				<!-- In Vision I Trust -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2> In Vision I Trust </h2>
-							<p>I will define the service vision, strategy and roadmap in collaboration with involving teams. <br></br>
-									I will be responsible for the product planning and execution throughout the product lifecycle from strategic planning to tactical activities. 
-									<br></br>You should trust me and chillax! </p>
+							<p>I can define the service vision, strategy and roadmap in collaboration with involving teams. 
+								<br></br> I will be responsible for the product planning and execution throughout the product lifecycle from 
+								strategic planning to tactical activities.									
+								<br></br>Trust me and chillax!	</p>
 						</div>
 
-						<!-- Gallery -->
-							<div class="gallery style2 medium lightbox onscroll-fade-in">
-								<article>
-									<a href="images/gallery/fulls/01.jpg" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/03.jpg" class="image">
-										<img src="images/gallery/thumbs/03.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Amet</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
-										<img src="images/gallery/thumbs/04.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/05.jpg" class="image">
-										<img src="images/gallery/thumbs/05.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ultrices Magna</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/06.jpg" class="image">
-										<img src="images/gallery/thumbs/06.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/07.jpg" class="image">
-										<img src="images/gallery/thumbs/07.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
-										<img src="images/gallery/thumbs/08.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Risus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/09.jpg" class="image">
-										<img src="images/gallery/thumbs/09.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Tempus Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/10.jpg" class="image">
-										<img src="images/gallery/thumbs/10.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Etiam</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/11.jpg" class="image">
-										<img src="images/gallery/thumbs/11.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/12.jpg" class="image">
-										<img src="images/gallery/thumbs/12.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-							</div>
-
-					</section>
+						
 
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
