--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/florence.jpg" alt="" />
 						</div>
 					</section>
 
@@ -84,12 +84,12 @@
 							<p1>I will act an evangelist for opportunities related to the services/products and I will use all methods 
 								to promote the product. If needed I can support sales team to present existing product
 								 functionality to prospects and track trends and opportunities in current and emerging markets.</p1>
-							<ul class="actions stacked">
-								<li><a href="#" class="button">That was a lame title </a></li>
-							</ul>
+								 <ul class="actions stacked">
+										<li><a href="#" class="button">That was a lame title </a></li>
+								</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/backyard.jpg" alt="" />
 						</div>
 					</section
 
@@ -109,68 +109,74 @@
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Ipsum sed consequat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2>Working Experience</h2>
+							<p>I have extensively worked on providing assurance and solutions on operational excellence for a large set of diverse systems. I have also worked with international and multi-cultural teams on IT project implementations, 
+								covering roles across the lifetime of value-driven projects,from requirements to implementation and testing.</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-diamond"></span>
-									<h3>Lorem</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Business Analyst INTRASOFT International </h3>
+									<p> a </p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-save"></span>
-									<h3>Ipsum</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Business Analyst INTRASOFT International</h3>
+									<p>b </p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-bar-chart"></span>
-									<h3>Dolor</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Business Analyst VATTENFALL</h3>
+									<p> .</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-wifi"></span>
-									<h3>Amet</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Business Analyst VATTENFALL</h3>
+									<p> .</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-cog"></span>
-									<h3>Magna</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Functional Support Specialist MMIT</h3>
+									<p> .</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-paper-plane"></span>
-									<h3>Tempus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Change Management and Communications Analyst SHELL </h3>
+									<p> .</p>
 								</section>
+
+					</section>				
+								<section class="wrapper style1 align-center">
+									<div class="inner">
+										<h2>Skills & Qualifications</h2>											
 								<section>
 									<span class="icon style2 major fa-desktop"></span>
 									<h3>Aliquam</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p> .</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-refresh"></span>
 									<h3>Elit</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p> .</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-hashtag"></span>
 									<h3>Morbi</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p> .</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-bolt"></span>
 									<h3>Turpis</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p> .</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-envelope"></span>
 									<h3>Ultrices</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p> .</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-leaf"></span>
 									<h3>Risus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p> .</p>
 								</section>
 							</div>
 						</div>
