--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/smeg.jpg" alt="" />
 						</div>
 					</section>
 
@@ -104,6 +104,8 @@
 								<br></br>Trust me and chillax!	</p>
 						</div>
 
+						<div class="Line"> </div>
+
 						
 
 				<!-- Six -->
@@ -119,17 +121,7 @@
 									<p> a </p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-save"></span>
-									<h3>Business Analyst INTRASOFT International</h3>
-									<p>b </p>
-								</section>
-								<section>
 									<span class="icon style2 major fa-bar-chart"></span>
-									<h3>Business Analyst VATTENFALL</h3>
-									<p> .</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-wifi"></span>
 									<h3>Business Analyst VATTENFALL</h3>
 									<p> .</p>
 								</section>
@@ -182,42 +174,14 @@
 						</div>
 					</section>
 
-				<!-- Seven -->
-					<section class="wrapper style1 align-center">
-						<div class="inner medium">
-							<h2>Get in touch</h2>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field half">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" value="" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" value="" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="6"></textarea>
-									</div>
-								</div>
-								<ul class="actions special">
-									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-
-						</div>
-					</section>
-
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://twitter.com/jenniouzz" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.instagram.com/jenniouzz/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.linkedin.com/in/jennyralli/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="mailto:rallijen@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
