--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section  class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Jenny Ralli</h1>
-							<p class="major">I am a tech professional with over 6 years of experience.I can help you manage your product during the complete lifecycle, organize and coordinate software development tasks and timelines, design clean and effective user experiences and keep your customers happy.</p>
+							<p class="major">Hello, i am Jenny and i have been working in tech for over 6 years. I can help you manage your product during the complete lifecycle, organize and coordinate software development tasks and timelines, design clean and effective user experiences and keep your customers happy.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Find out how i can help</a></li>
 							</ul>
@@ -32,34 +32,34 @@
 						</div>
 					</section>
 
-				<!-- Customer Love -->
+				<!-- Organizational Guru -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Customer Love</h2>
-							<p>Lay back and let me develop and maintain customer relationships. My natural inclination to actively listening has leveraged with my experience to asking the right questions which allows me to quickly identify 
-								customer needs and opportunities. It is all about successful communication between relative stakeholders and this is my cup of tea. 
-								note: extra enthusiastic when i attend conferences and trade shows getting to socialize and promote services. 
-								</p>
-							<ul class="actions stacked">
-								<li><a href="#" class="button">See Proof!</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/customer love.jpg" alt="" />
-						</div>
-					</section>
-
-				<!-- Organizational Guru -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
-							<h2>Organizational Guru</h2>
-							<p> My magic powers lay to aggregating requests from stakeholders, moderating discussion regarding prioritization of requested developments and translating business requirements to system specifications in a way that developers can successfully code in accordance with customer needs. The most significant activities of my line of work is collaborating with technical teams and closely tracking group progress towards achieving tasks and timelines. I will build and maintain the feature/issue backlog and coordinate with engineers to address all items. If necessary I will elevate roadblocks as needed. Throughout the business process I will conduct competitive analysis and market evaluations and I will document my research findings in a comprehensive manner.  All these actions, to be successfully conducted, are well supported by my collaboration and communication skills.</p>
-							<ul class="actions stacked">
-								<li><a href="#" class="button">Too long text, i need proof</a></li>
+								<h2>Organizational Guru</h2>
+								<p> My magic powers are aggregating requests from stakeholders, moderating discussion regarding prioritization of requested developments and translating business requirements to system specifications in a way that developers can successfully code in accordance with customer needs. The most significant activities of my line of work is collaborating with technical teams and closely tracking group progress towards achieving tasks and timelines. I will build and maintain the feature/issue backlog and coordinate with engineers to address all items. If necessary I will elevate roadblocks as needed. Throughout the business process I will conduct competitive analysis and market evaluations and I will document my research findings in a comprehensive manner.  All these actions, to be successfully conducted, are well supported by my collaboration and communication skills.</p>
+								<ul class="actions stacked">
+								<li><a href="#" class="button organizationalGuru"> Too long text, i need proof</a></li>
 							</ul>
 						</div>
 						<div class="image">
 							<img src="images/smeg.jpg" alt="" />
+						</div>
+					</section>
+					
+				<!-- Customer Love -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+								<h2>Customer Love</h2>
+								<p>Lay back and let me develop and maintain customer relationships. My natural inclination to actively listening has leveraged with my experience to asking the right questions which allows me to quickly identify 
+									customer needs and opportunities. It is all about successful communication between relative stakeholders and this is my cup of tea. 
+									note: extra enthusiastic when i attend conferences and trade shows getting to socialize and promote services. 
+									</p>
+							<ul class="actions stacked">
+								<li><a href="#" class="button">Where is the Love?</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/customer love.jpg" alt="" />
 						</div>
 					</section>
 
@@ -104,7 +104,7 @@
 								<br></br>Trust me and chillax!	</p>
 						</div>
 
-						<div class="Line"> </div>
+					<div class="line"> </div>
 
 						
 
@@ -124,7 +124,7 @@
 									<span class="icon style2 major fa-bar-chart"></span>
 									<h3>Business Analyst VATTENFALL</h3>
 									<p> .</p>
-								</section>
+								</section>	
 								<section>
 									<span class="icon style2 major fa-cog"></span>
 									<h3>Functional Support Specialist MMIT</h3>
