--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/me2.jpg" alt="" />
 						</div>
 					</section>
 
@@ -40,12 +40,12 @@
 								My natural inlcination to actively listening has leveraged with my experience to asking the right questions which allows me to quickly identify 
 								customer needs and opportunities. It is all about successful communication between relative stakeholders and this is my cup of tea. 
 								note: extra ethousiastic when i attend conferences and trade shows getting to socialize and promote services.</p>
-							<ul class="actions stacked">
-								<li><a href="#" class="button">See Proof!</a></li>
-							</ul>
+							<!-- <ul class="actions stacked">
+								<li><a href="#" class="button">button</a></li>
+							</ul> -->
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/couple_hug.jpg" alt="" />
 						</div>
 					</section>
 
@@ -54,12 +54,12 @@
 						<div class="content">
 							<h2>Organizational Guru</h2>
 							<p> My magic powers lay to aggregating requests from stakeholders, moderating discussion regarding prioritization of requested developments and translating business requirements to system specifications in a way that developers can successfully code in accordance with customer needs. The most significant activities of my line of work is collaborating with technical teams and closely tracking group progress towards achieving tasks and timelines. I will build and maintain the feature/issue backlog and coordinate with engineers to address all items. If necessary I will elevate roadblocks as needed. Throughout the business process I will conduct competitive analysis and market evaluations and I will document my research findings in a comprehensive manner.  All these actions, to be successfully conducted, are well supported by my collaboration and communication skills.</p>
-							<ul class="actions stacked">
-								<li><a href="#" class="button">Too long text, i need proof</a></li>
-							</ul>
+							<!-- <ul class="actions stacked">
+								<li><a href="#" class="button">button</a></li>
+							</ul> -->
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/olive_trees.jpg" alt="" />
 						</div>
 					</section>
 
@@ -68,295 +68,130 @@
 						<div class="content">
 							<h2>UX & Design </h2>
 							<p>I absolutely adore developing new products and defining the user experience based on the agreed requirements. I can manage the enhancement of existing services and design the user experience for new products.  Design thinking is my preferred method and user stories help me express development objectives. I will analyze product performance through customer interviews and user tracking.</p>
-							<ul class="actions stacked">
-								<li><a href="#" class="button">Show me!</a></li>
-							</ul>
+							<!-- <ul class="actions stacked">
+								<li><a href="#" class="button">button</a></li>
+							</ul> -->
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/pink_wall.jpg" alt="" />
 						</div>
 					</section>
 
-				<!-- EvanJennyst -->
+				<!-- evangelist -->
 				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>EvanJennyst </h2>
-							<p>I will act an evangelist for opportunities related to the services/products and I will use all methods to promote the product. If needed I can support sales team to present existing product functionality to prospects and track trends and opportunities in current and emerging markets.  </p>
-							<ul class="actions stacked">
-								<li><a href="#" class="button">That was a lame title </a></li>
-							</ul>
+							<h2>Evangelist </h2>
+							<p>I will act an evangelist for opportunities related to the services/products and I will use all methods to 
+								promote the product. If needed I can support sales team to present existing product functionality to 
+								prospects and track trends and opportunities in current and emerging markets. 
+							
+							</p>
+							<!-- <ul class="actions stacked">
+								<li><a href="#" class="button">button </a></li>
+							</ul> -->
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/autumn_leaves.jpg" alt="" />
 						</div>
 					</section
 
 
-				<!-- EvanJennyst -->
-					<section class="wrapper style1 align-center">
-						<div class="inner">
-							<h2> In Vision I Trust </h2>
-							<p>I will define the service vision, strategy and roadmap in collaboration with involving teams. <br></br>
-									I will be responsible for the product planning and execution throughout the product lifecycle from strategic planning to tactical activities. 
-									<br></br>You should trust me and chillax! </p>
-						</div>
-
-						<!-- Gallery -->
-							<div class="gallery style2 medium lightbox onscroll-fade-in">
-								<article>
-									<a href="images/gallery/fulls/01.jpg" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/03.jpg" class="image">
-										<img src="images/gallery/thumbs/03.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Amet</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
-										<img src="images/gallery/thumbs/04.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/05.jpg" class="image">
-										<img src="images/gallery/thumbs/05.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ultrices Magna</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/06.jpg" class="image">
-										<img src="images/gallery/thumbs/06.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/07.jpg" class="image">
-										<img src="images/gallery/thumbs/07.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
-										<img src="images/gallery/thumbs/08.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Risus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/09.jpg" class="image">
-										<img src="images/gallery/thumbs/09.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Tempus Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/10.jpg" class="image">
-										<img src="images/gallery/thumbs/10.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Etiam</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/11.jpg" class="image">
-										<img src="images/gallery/thumbs/11.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/12.jpg" class="image">
-										<img src="images/gallery/thumbs/12.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-							</div>
-
-					</section>
 
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Ipsum sed consequat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2>Innovation - Collaboration - Design </h2>
+							<p>Take a tour at my experience, the methods I use and the portfolio of my work</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-diamond"></span>
-									<h3>Lorem</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Product Management: Research</h3>
+									<p>Basic or Pure research: documentation, information sources, production or legacy systems, existing evaluative research 
+									Action Research: cyclical self-reflective process
+									participate – OBSERVE
+									generate knowledge –  REFLECT
+									enact change –  PLAN
+									address practical problems –  ACT
+									</p>		
 								</section>
 								<section>
 									<span class="icon style2 major fa-save"></span>
-									<h3>Ipsum</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+									<h3>Process Design</h3>
+									<p>text</section>
 								<section>
 									<span class="icon style2 major fa-bar-chart"></span>
-									<h3>Dolor</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+									<h3>Change and Communications</h3>
+									<p>text</section>
 								<section>
-									<span class="icon style2 major fa-wifi"></span>
-									<h3>Amet</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+									<span class="icon style2 major fa-cog"></span>
+									<h3>Tools</h3>
+									<p>Microsoft Visio - 
+										ARIS Designer -
+										ARIS Express -
+										IBM Rational Software Architect -  
+										TIBCO Business Studio - BPM Edition - 
+										Visual Paradigm
+									</section>
 								<section>
 									<span class="icon style2 major fa-cog"></span>
 									<h3>Magna</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+									<p>text</section>
 								<section>
 									<span class="icon style2 major fa-paper-plane"></span>
 									<h3>Tempus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+									<p>text</section>
 								<section>
 									<span class="icon style2 major fa-desktop"></span>
 									<h3>Aliquam</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+									<p>text</section>
 								<section>
 									<span class="icon style2 major fa-refresh"></span>
 									<h3>Elit</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+									<p>text</section>
 								<section>
 									<span class="icon style2 major fa-hashtag"></span>
 									<h3>Morbi</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+									<p>text</section>
 								<section>
 									<span class="icon style2 major fa-bolt"></span>
 									<h3>Turpis</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+									<p>text</section>
 								<section>
 									<span class="icon style2 major fa-envelope"></span>
 									<h3>Ultrices</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+									<p>text</section>
 								<section>
 									<span class="icon style2 major fa-leaf"></span>
 									<h3>Risus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+									<p>text</section>
 							</div>
 						</div>
 					</section>
 
-				<!-- Seven -->
-					<section class="wrapper style1 align-center">
-						<div class="inner medium">
-							<h2>Get in touch</h2>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field half">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" value="" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" value="" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="6"></textarea>
-									</div>
-								</div>
-								<ul class="actions special">
-									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
-								</ul>
-							</form>
 
-						</div>
-					</section>
+
+
+					<!-- EvanJennyst -->
+					<section class="wrapper style1 align-center">
+							<div class="inner">
+								<h2> In Vision I Trust </h2>
+								<p>I can define the service vision, strategy and roadmap in collaboration with involving teams. <br></br>
+								I will be responsible for the product planning and execution throughout the product lifecycle from strategic planning to tactical activities. 
+								<br></br>Lets talk, i want to listen! </p>
+							</div>
+
+			
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon style2 fa-behance"><span class="label">Behance</span></a></li>
 								<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="#" class="icon style2 fa-goodreads"><span class="label">Goodreads</span></a></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
